# burn-regression-unet

./: .gitignore  Cargo.toml  log.txt
src/: main.rs
src/dataset/: data.rs  dataset.rs  mod.rs
src/models/: mod.rs  model_parts.rs  simple_unet.rs  unet.rs  unetplusplus.rs
