[package]
name = "burn-unet"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { git = "https://github.com/tracel-ai/burn.git", branch = "main", features = ["train", "wgpu", "vision", "ndarray", "tui", "metrics","fusion"] }
serde = { version = "1.0.208", features = ["alloc", "derive"] }
walkdir = "2.5.0"
gdal = { version = "0.17.0", features = ["array"], optional = true }
bytemuck = "1.17.0"

[features]
default = []
gdal = ["dep:gdal"] 
ndarray = [] # Link the gdal dependency to the gdal feature
